ADDED: BaseClass, CommonMethods and other framework core classes

--- a/src/test/resources/configs/configuration.properties
+++ b/src/test/resources/configs/configuration.properties
@@ -1,4 +1,10 @@
 browser=chrome
+width=1920
+height=1080
 url=https://www.saucedemo.com/
 username=standard_user
 password=secret_sauce
+timestampFormat=yyyy_MM_dd_HH_mm_ss
+screenshotFormat=png
+headless=false
+environment=local
